--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/BrandonNichols/SenchigamiDB#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "knex": "^2.1.0",
     "pg": "^8.7.3"
